--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ Here’s an **all-in-one HTML file** of your portfolio with a **simple 3D animat
 
   <section id="contact" class="contact">
     <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <p>Email:dinakaran262007gmail.com</a></p>
     <p>Phone: 9342608131</p>
     <button onclick="showAlert()">Say Hello</button>
   </section>
@@ -415,7 +415,7 @@ Let me know and I’ll help you build it.
 
   <section id="about" class="about">
     <h2>About Me</h2>
-    <p>Hello! I'm a passionate web developer with experience in building modern, responsive websites and web apps. I love solving problems and learning new technologies.</p>
+    <p>Hello! I'm dinakaran passionate web developer with experience in building modern, responsive websites and web apps. I love solving problems and learning new technologies.</p>
   </section>
 
   <section id="skills" class="skills">
