--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ Let me know and I’ll help you build it.
 
   <section id="contact" class="contact">
     <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <p>Email: <a href="dinakaran262007@gmail.com">dinakaran262007gmail.com</a></p>
     <p>Phone: 9342608131</p>
     <button onclick="showAlert()">Say Hello</button>
   </section>
